# PakMan

./: .gitignore  CONTRIBUTING.md  INTEGRATION_GUIDE.md  Logo.txt  PACKAGES.md  PKGMAN_README.md  PUBLISH.md  README.md  __init__.py  __main__.py  cli.py  community-registry.json  health.py  hotload.py  package_manager.py  pyproject.toml  registry.json  security.py  sync_registry.py  update_check.py
_retired/Alfred.rust/: install.sh
_retired/Alfred.rust/crates/bookmark/: Cargo.toml
_retired/Alfred.rust/crates/bookmark/src/: main.rs
_retired/Alfred.rust/crates/cache_ctrl/: Cargo.toml
_retired/Alfred.rust/crates/chat_session/: Cargo.toml
_retired/Alfred.rust/crates/common/: Cargo.toml
_retired/Alfred.rust/crates/common/src/: output.rs
_retired/Alfred.rust/crates/csv_view/: Cargo.toml
_retired/Alfred.rust/crates/db_query/: Cargo.toml
_retired/Alfred.rust/crates/diff_json/: Cargo.toml
_retired/Alfred.rust/crates/dns_lookup/: Cargo.toml
_retired/Alfred.rust/crates/env_compare/: Cargo.toml
_retired/Alfred.rust/crates/epoch/: Cargo.toml
_retired/Alfred.rust/crates/epoch/src/: main.rs
_retired/Alfred.rust/crates/event_log/src/: main.rs
_retired/Alfred.rust/crates/file_hash/: Cargo.toml
_retired/Alfred.rust/crates/file_watch/: Cargo.toml
_retired/Alfred.rust/crates/git_status/src/: main.rs
_retired/Alfred.rust/crates/governor/examples/: governor_config.json
_retired/Alfred.rust/crates/governor/src/: lib.rs
_retired/Alfred.rust/crates/grep_lite/: Cargo.toml
_retired/Alfred.rust/crates/hash_gen/src/: main.rs
_retired/Alfred.rust/crates/http_get/: Cargo.toml
_retired/Alfred.rust/crates/json_fmt/: Cargo.toml
_retired/Alfred.rust/crates/log_parse/: Cargo.toml
_retired/Alfred.rust/crates/mcp_server/: Cargo.toml
_retired/Alfred.rust/crates/model_list/: Cargo.toml
_retired/Alfred.rust/crates/model_list/src/: main.rs
_retired/Alfred.rust/crates/observatory/src/: main.rs
_retired/Alfred.rust/crates/password_check/src/: main.rs
_retired/Alfred.rust/crates/proc_list/: Cargo.toml
_retired/Alfred.rust/crates/queue_processor/: Cargo.toml
_retired/Alfred.rust/crates/rate_limiter/src/: main.rs
_retired/Alfred.rust/crates/response_parse/src/: main.rs
_retired/Alfred.rust/crates/schema_gen/: Cargo.toml
_retired/Alfred.rust/crates/schema_gen/src/: lib.rs
_retired/Alfred.rust/crates/service_ctrl/: Cargo.toml
_retired/Alfred.rust/crates/service_ctrl/src/: main.rs
_retired/Alfred.rust/crates/skill_registry/: Cargo.toml
_retired/Alfred.rust/crates/skill_registry/examples/: genome_fs_scan.json
_retired/Alfred.rust/crates/skill_registry/src/: lib.rs  main.rs
_retired/Alfred.rust/crates/sleep/: Cargo.toml
_retired/Alfred.rust/crates/subsystem_registry/examples/: code_intelligence.json  security_analysis.json
_retired/Alfred.rust/crates/task_runner/src/: main.rs
_retired/Alfred.rust/crates/uuid_gen/: Cargo.toml
_retired/Alfred.rust/crates/uuid_gen/src/: main.rs
_retired/Alfred.rust/docs/: AI_INTEGRATION.md  COMPLETE_ARCHITECTURE.md  FINAL_STATUS.md  OBSERVATORY.md  QUICKSTART.md
package_manager/: __init__.py  community-registry.json  core.py  installer.py  registry.json  registry.py
