[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forge"
version = "1.0.0"
description = "Forge AI capability manager — install, list, and manage AI packages"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "udahar" }]
keywords = ["ai", "package-manager", "llm", "prompt", "forge"]

# Runtime deps — minimal so Forge installs without friction
dependencies = []

[project.scripts]
# Primary entry point: the `forge` shell command → cli.py main()
forge = "cli:main"

[tool.setuptools]
# Root-level modules
py-modules = ["cli", "security", "health", "hotload", "update_check"]

[tool.setuptools.packages.find]
# Also pick up the package_manager/ sub-package
include = ["package_manager*"]

[tool.setuptools.package-data]
package_manager = ["registry.json", "community-registry.json"]

[project.urls]
Homepage = "https://github.com/udahar/Forge"
Repository = "https://github.com/udahar/Forge"
