[package]
name = "mcp_server"
version.workspace = true
edition.workspace = true
description = "MCP server for AI agent integration with Rust utilities"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
