[package]
name = "queue_processor"
version.workspace = true
edition.workspace = true
description = "Process JSON queue every N seconds"

[dependencies]
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
